src/objects/CD_BPA_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPA_Cost_Id__c</fullName>
        <externalId>true</externalId>
        <label>BPA Cost Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BPA_Created_By__c</fullName>
        <label>BPA Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPA_Creation_Date__c</fullName>
        <label>BPA Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BPA_RFQ_No__c</fullName>
        <label>BPA RFQ No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPA_Updated_By__c</fullName>
        <label>BPA Updated By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPA_Updated_Date__c</fullName>
        <label>BPA Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <label>Cost Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Number_IOD_IN__c</fullName>
        <label>Item Number IOD IN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Number</label>
        <referenceTo>CD_Items__c</referenceTo>
        <relationshipLabel>CD BPA Costs</relationshipLabel>
        <relationshipName>CD_BPA_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Number_IOD_IN__c</fullName>
        <label>Supplier Number IOD IN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Number</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CD BPA Costs</relationshipLabel>
        <relationshipName>CD_BPA_Costs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CD BPA Cost</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Cost_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Item_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CD BPA Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD BPA Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>